--- a/deep-learning-challenge.ipynb
+++ b/deep-learning-challenge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -152,7 +152,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -303,7 +303,7 @@
        "4              1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -337,7 +337,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -377,7 +377,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -418,7 +418,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -460,7 +460,7 @@
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -529,7 +529,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,29 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qb/7shvsxt10k32_mgwv3kxqph40000gn/T/ipykernel_34543/3679914812.py:5: FutureWarning: Index.__or__ operating as a set operation is deprecated, in the future this will be a logical operation matching Series.__or__.  Use index.union(other) instead.\n",
+      "  class3 = class2 | class1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "C1000    17326\n",
-       "C2000     6074\n",
-       "C1200     4837\n",
-       "C3000     1918\n",
-       "C2100     1883\n",
-       "         ...  \n",
-       "C4120        1\n",
-       "C8210        1\n",
-       "C2561        1\n",
-       "C4500        1\n",
-       "C2150        1\n",
-       "Name: CLASSIFICATION, Length: 71, dtype: int64"
+       "Other    34299\n",
+       "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,8 +570,11 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "classifications_to_replace = (classification_counts < 1918) | (classification_counts > 4837)\n",
-    "classifications_to_replace.to_list()\n",
+    "class1 = (classification_counts[classification_counts > 1918].index)\n",
+    "class2 = (classification_counts[classification_counts < 4837].index)\n",
+    "class3 = class2 | class1\n",
+    "\n",
+    "classifications_to_replace = list(class3)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
