--- a/deep-learning-challenge.ipynb
+++ b/deep-learning-challenge.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -398,27 +398,19 @@
     {
      "data": {
       "text/plain": [
-       "T3     27037\n",
-       "T4      1542\n",
-       "T6      1216\n",
-       "T5      1173\n",
-       "T19     1065\n",
-       "T8       737\n",
-       "T7       725\n",
-       "T10      528\n",
-       "T9       156\n",
-       "T13       66\n",
-       "T12       27\n",
-       "T2        16\n",
-       "T25        3\n",
-       "T14        3\n",
-       "T29        2\n",
-       "T15        2\n",
-       "T17        1\n",
+       "T3       27037\n",
+       "T4        1542\n",
+       "T6        1216\n",
+       "T5        1173\n",
+       "T19       1065\n",
+       "T8         737\n",
+       "T7         725\n",
+       "T10        528\n",
+       "Other      276\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +418,7 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "application_types_to_replace = app_type_counts[app_type_counts.lt(528)]\n",
+    "application_types_to_replace = list(app_type_counts[app_type_counts < 528].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -438,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -460,7 +452,7 @@
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -529,7 +521,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,27 +534,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/qb/7shvsxt10k32_mgwv3kxqph40000gn/T/ipykernel_34543/3679914812.py:5: FutureWarning: Index.__or__ operating as a set operation is deprecated, in the future this will be a logical operation matching Series.__or__.  Use index.union(other) instead.\n",
-      "  class3 = class2 | class1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Other    34299\n",
+       "C1000    17326\n",
+       "C2000     6074\n",
+       "C1200     4837\n",
+       "Other     2261\n",
+       "C3000     1918\n",
+       "C2100     1883\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,11 +559,8 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "class1 = (classification_counts[classification_counts > 1918].index)\n",
-    "class2 = (classification_counts[classification_counts < 4837].index)\n",
-    "class3 = class2 | class1\n",
     "\n",
-    "classifications_to_replace = list(class3)\n",
+    "classifications_to_replace = list(classification_counts[classification_counts < 1883].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -586,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,35 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'y'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/anaconda3/envs/dev/lib/python3.10/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/anaconda3/envs/dev/lib/python3.10/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/envs/dev/lib/python3.10/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'y'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Split our preprocessed data into our features and target arrays\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mapp_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43my\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      3\u001b[0m X \u001b[38;5;241m=\u001b[39m app_df\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Split the preprocessed data into a training and testing dataset\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/dev/lib/python3.10/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/anaconda3/envs/dev/lib/python3.10/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'y'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "y = app_df['y']\n",
-    "X = app_df.drop(columns='y')\n",
+    "y = app_df['IS_SUCCESSFUL']\n",
+    "X = app_df.drop(columns='IS_SUCCESSFUL')\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
@@ -632,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,29 +620,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From Z:\\Travis\\anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 80)                3520      \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 30)                2430      \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 31        \n",
+      " dense (Dense)               (None, 80)                800       \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 30)                2430      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 31        \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,981\n",
-      "Trainable params: 5,981\n",
-      "Non-trainable params: 0\n",
+      "Total params: 3261 (12.74 KB)\n",
+      "Trainable params: 3261 (12.74 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -688,13 +650,13 @@
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "nn_model.add(tf.keras.layers.Dense(units=80, activation=\"relu\", input_dim=2))\n",
+    "nn.add(tf.keras.layers.Dense(units=80, activation=\"relu\", input_dim=9))\n",
     "\n",
     "# Second hidden layer\n",
-    "nn_model.add(tf.keras.layers.Dense(units=30, activation=\"sigmoid\"))\n",
+    "nn.add(tf.keras.layers.Dense(units=30, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "nn_model.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
